--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -97,7 +97,7 @@
 // // @import '@plugins/selectize.js/dist/css/selectize.bootstrap4.css';
 // // @import '@plugins/chosen/chosen.min.css';
 @import '~/filepond/dist/filepond.min.css';
-// @import './citadel.css';
+@import './citadel.css';
 // @import '@plugins/perfect-scrollbar/css/perfect-scrollbar.min.css';
 // @import './custom.css';
 // // @import url(https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.18/summernote-bs4.min.css);
