--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -67,8 +67,8 @@
 @import "~/switchery/switchery.css";
 @import "~/toastr/build/toastr.min.css";
 // @import './custom-bootstrap.scss';
-// @import './colors.css';
-// @import './components.css';
+@import './colors.css';
+@import './components.css';
 // @import './bootstrap-extended.css';
 // @import './style.css';
 // @import './animate.css';
@@ -99,7 +99,7 @@
 @import '~/filepond/dist/filepond.min.css';
 @import './citadel.css';
 // @import '@plugins/perfect-scrollbar/css/perfect-scrollbar.min.css';
-// @import './custom.css';
+@import './custom.css';
 // // @import url(https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.18/summernote-bs4.min.css);
 
 
