Add InputMask jquery

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -68,7 +68,7 @@
 @import "~/toastr/build/toastr.min.css";
 // @import './custom-bootstrap.scss';
 @import './colors.css';
-@import './components.css';
+// @import './components.css';
 // @import './bootstrap-extended.css';
 // @import './style.css';
 // @import './animate.css';
