--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -30,7 +30,7 @@
 }
 
 
-
+@import 'toastr';
 @import "@support/dash-ui/src/assets/css/theme.css";
 @import "~/bootstrap-icons/font/bootstrap-icons.css";
 @import "~/dropzone/dist/dropzone.css";
