--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -723,3 +723,12 @@ table.citadel-table thead th {
     align-items: center;
     height: 100%;
 }
+
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 6px solid #ccc;
+  border-top-color: #3498db;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
