--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -71,8 +71,8 @@
 // @import './components.css';
 // @import './bootstrap-extended.css';
 // @import './style.css';
-// @import './animate.css';
-// @import './fonts.css';
+@import './animate.css';
+@import './fonts.css';
 // @import './bootstraptoggle.css';
 // // @import '@plugins/jasny-bootstrap-4.0.0/css/jasny-bootstrap.min.css';
 // // @import '@plugins/font-awesome/css/font-awesome.min.css';
