--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -31,7 +31,7 @@
 
 
 @import 'toastr';
-@import "@support/dash-ui/src/assets/css/theme.css";
+// @import "@support/dash-ui/src/assets/css/theme.css";
 @import "~/bootstrap-icons/font/bootstrap-icons.css";
 @import "~/dropzone/dist/dropzone.css";
 @import "~/@mdi/font/css/materialdesignicons.min.css";
