Select2 alternative using TomSelect

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -32,6 +32,7 @@
 
 @import 'toastr';
 // @import "@support/dash-ui/src/assets/css/theme.css";
+@import '~/tom-select/dist/css/tom-select.bootstrap5.css';
 @import "~/bootstrap-icons/font/bootstrap-icons.css";
 @import "~/dropzone/dist/dropzone.css";
 @import "~/@mdi/font/css/materialdesignicons.min.css";
