update menu-item active and show

--- a/resources/css/citadel.css
+++ b/resources/css/citadel.css
@@ -298,14 +298,14 @@
 }
 
 
-.nav-link.active {
+/* .nav-link.active {
     background-color: #81b2e2;
     color: white;
 }
 
 .nav-link.hover:hover {
     background-color: #badcfd;
-}
+} */
 
 
 i[class^="ft-"],
